--- a/stylesheets/sass/layout.sass
+++ b/stylesheets/sass/layout.sass
@@ -15,5 +15,12 @@
     min-width: 188px
 
 .l-section
-    margin:30px 0px
+    margin: 32px 0px
 
+
+.l-indent-2rem
+    margin-left:2rem !important
+
+.l-indent-4rem
+    margin-left:4rem !important
+    padding-left:0px !important
