--- a/stylesheets/sass/modules/footer.sass
+++ b/stylesheets/sass/modules/footer.sass
@@ -1,26 +1,22 @@
 @use '../variable.sass' as v
 
 .footer
-    background: black
     justify-content: space-between
-    padding: 40px
-
-
-.footer-copyright
-    .codepen-logo
-        font-size:2rem
-        margin:10px
+    align-items: center
+    background: black
+    padding: 32px
 
 .footer-list
-    margin:10px
+    h4
+        margin: 2px
+        margin-right: 1rem
 
-.footer-munu
-    margin:10px
 
+.footer-logo
+    font-size:2rem
 
-.footer-list-title
-    font-weight: 700
 
 .footer-list-text
-    margin-left: 20px
+    margin-right: 1rem
     color: #aaaebc
+    
