--- a/stylesheets/sass/modules/hero.sass
+++ b/stylesheets/sass/modules/hero.sass
@@ -9,38 +9,24 @@
 .hero
     margin:32px
 
-.code-cards
+.hero-title
     width: 50%
+    padding:32px
     @include m.sm-max
         width: 100%
 
+.hero-cube
+    font-size:36px
 
-.code-card-large-square
-    margin: 16px auto
-    background: linear-gradient(120deg , #4c4f5a , #202125)
-    border: solid 1px v.$light-Gray
-    border-radius: 6px
-    width: 495px
-    height: 410px
+.hero-text
+    font-size: 1.1rem
 
-.code-card-square
-    background: #1d1e22
-    border-radius: 6px
-    width: 300px
-    height: 140px
-    margin-bottom: 8px
+.hero-title-text
+    font-size: 3rem
+    font-weight: 900
+    margin: 0
 
-.mini-square-html
-    position: relative
-    left:160px
-    bottom:20px
-
-.mini-square-css
-    position: relative
-    left:220px
-    bottom:20px
-
-.mini-square-js
-    position: relative
-    left:160px
-    bottom:20px
+.hero-footer
+    .button
+        width: 200px
+        font-size:1.4rem
