--- a/stylesheets/sass/modules/product-item.sass
+++ b/stylesheets/sass/modules/product-item.sass
@@ -1,61 +1,47 @@
 @use '../variable.sass' as v
 
-.product-item-list-text
-    color:#b7bbc8
+
 .product-item-list-row
     justify-content: center
 
 
 .product-item-list-block
-    margin: 20px 15px
+    margin: 2rem 1rem
     width: 360px
-    height: 340px
     background: #2c303a
 
 .product-item-list-square-text
     padding: 15px
 
 .product-item-list-footer
-    margin-top: 30px
+    padding: 8px 16px
 
 .product-item-list-square
-    padding: 15px
+    border-radius: 4px
+    background: #2c303a
     transition: 0.2s
     &:hover
         transform: scale(1.05)
         opacity: 0.4
         cursor: pointer
-
-.item-list-footer
-    margin: 20px
-
-.item-list-footer-text
-    padding:10px 20px
-    border: solid 3px #aaaebc
-    border-radius: 3px
-
-.img-button
-    img
-        width: 100%
-        object-fit: cover
     
-.img-icon
+.product-item-list-img
     img
         width: 40px
         height: 40px
+        border-radius: 4px
 
 .product-item-list-icon
-    margin: 20px 0px
-    padding: 0
+    display: flex
+    padding: 16px
+    padding-top: 0px
 
 .product-item-list-Name
-    padding-left: 16px
+    margin-left: 1rem
 
 
 .product-item-list-footer-param
-    padding: 0.2rem
-    text-align: center
-    border-radius: 3px
-    border: solid 3px black
     background: black
-    margin-left: 0.5rem
+    border-radius: 4px
+    margin-right: 4px
+    padding: 2px 4px
