--- a/stylesheets/sass/modules/search-form.sass
+++ b/stylesheets/sass/modules/search-form.sass
@@ -2,11 +2,11 @@
 
 
 .search-form
+    margin: 8px
+    padding:8px
     background: #252830
-    margin: 10px
-    padding:10px
-    width: 100%
     border-radius: 4px
+    width: 100%
     .fa-search
         font-size: 20px
 
@@ -16,4 +16,4 @@
     background: #252830
     width:100%
     border: 0
-    padding-left: 1rem
+    padding-left: 16px
