--- a/stylesheets/sass/modules/sidebar-menu.sass
+++ b/stylesheets/sass/modules/sidebar-menu.sass
@@ -7,6 +7,7 @@
     @include m.sm-max
         display: none
 
+
 .sidebar-munu
     a
         display: block
@@ -21,8 +22,8 @@
     list-style-type: none
 
 .sidebar-list-sub-title
-    padding-left: 16px
-    padding-bottom: 0.2rem
+    margin-left: 16px
+    margin-bottom: 0.2rem
     font-size: v.$sidebar-font-size
 
 
