--- a/stylesheets/sass/variable.sass
+++ b/stylesheets/sass/variable.sass
@@ -1,4 +1,3 @@
-
 // Colors:
 
 $background-color: #131417
@@ -10,6 +9,7 @@ $light-purple:#a767e5
 $light-Blue:#12bcfe
 $light-Gray: #3f3f43
 
+$color-warning: #ffdd40
 // Break Points:
 
 $screen-sm-min: 576px
