--- a/stylesheets/sass/base.sass
+++ b/stylesheets/sass/base.sass
@@ -20,7 +20,12 @@ li
   font-size: 15px
   text-align: left
 
+ul
+  padding-left: 0
+  margin-left: 0
+
 a
   text-decoration: none
   :hover
     cursor: pointer
+
