--- a/stylesheets/sass/modules/badge.sass
+++ b/stylesheets/sass/modules/badge.sass
@@ -1,8 +1,8 @@
 @use '../variable.sass' as v
 
-.codepen-badge
+.pro-account-badge
     color: black
-    background: yellow
+    background: #ffdd40
     font-size:10px
     border-radius: 4px
     padding:2px 4px
