--- a/stylesheets/sass/modules/button.sass
+++ b/stylesheets/sass/modules/button.sass
@@ -1,46 +1,46 @@
 @use '../variable.sass' as v
 
 .button
+    display: inline-block
     text-align: center
+    border: 3px solid v.$light-Gray
+    border-radius: 4px
+    padding: 8px 16px
     &:hover
         opacity: .4
         cursor: pointer
 
 
-.coding-button
+.logo-button
     margin: 0px 16px
     border: 3px solid  transparent
     background-image: linear-gradient(115deg, v.$light-Green ,v.$light-Yellow,v.$light-purple,v.$light-Blue,v.$light-Green )  
     width:154px
     padding: 0
 
-.coding-logo-sub-text       
-    margin:0.2rem
-    font-size: 0.8rem
-    text-align: center
-    color: #b7bbc8
 
-.coding-button-text
-    background: black
-    padding: 8px
-    text-align: center
-    width:100%
-
-
-
-.signup-button
+.button-primary
     color: black
     background: #47cf73
     border: solid 1px #47cf37
 
-.login-button
+.button-secondary
     background: #444857
     border: solid 1px #444857
-    border-radius: 3px
 
-.register-button
-    font-size: 1.4rem
-    color: black
-    background: #47cf73
-    border: solid 1px #47cf37
-    border-radius: 3px
+.button-border
+    display: inline-block
+    border: solid 3px #aaaebc
+    border-radius: 4px
+    padding:8px 16px
+    text-align: center
+
+.button-img
+    width: 350px
+    border-radius: 4px
+    margin: auto
+    padding: 8px
+    img
+        width: 100%
+        object-fit: cover
+        border-radius: 4px
