--- a/stylesheets/sass/modules/header.sass
+++ b/stylesheets/sass/modules/header.sass
@@ -1,8 +1,7 @@
 @use '../variable.sass' as v
 
-.header-button
+.header-buttons
     padding: 8px
     .button
-        margin-left: 8px
+        margin-right: 8px
         min-width:100px
-        padding:10px
