--- a/stylesheets/sass/modules/button.sass
+++ b/stylesheets/sass/modules/button.sass
@@ -22,11 +22,11 @@
 .button-primary
     color: black
     background: #47cf73
-    border: solid 1px #47cf37
+    border: 0px
 
 .button-secondary
     background: #444857
-    border: solid 1px #444857
+    border:  0px 
 
 .button-border
     display: inline-block
