--- a/stylesheets/sass/modules/text.sass
+++ b/stylesheets/sass/modules/text.sass
@@ -9,7 +9,7 @@
     font-weight: 900
 
 .text-primary
-    color:  #6ae5b6
+    color:  #47cf73
 
 .text-secondary
     color:  v.$light-Blue
@@ -19,7 +19,6 @@
 
 .text-info
     color: #b7bbc8
-
 
 .text-warning
     color: v.$color-warning
