--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -237,9 +237,8 @@ a :hover {
 
 .code-card-large-square {
   margin: 16px auto;
-  background: linear-gradient(120deg, #4c4f5a, #202125);
-  border: solid 1px #3f3f43;
   border-radius: 6px;
+  background: linear-gradient(109.61deg, #4c4f5a 4.26%, #202125 84.84%);
   width: 495px;
   height: 410px;
 }
