--- a/stylesheets/sass/modules/code-card.sass
+++ b/stylesheets/sass/modules/code-card.sass
@@ -21,9 +21,8 @@
 
 .code-card-large-square
     margin: 16px auto
-    background: linear-gradient(120deg , #4c4f5a , #202125)
-    border: solid 1px v.$light-Gray
     border-radius: 6px
+    background: linear-gradient(109.61deg , #4c4f5a 4.26%, #202125 84.84%)
     width: 495px
     height: 410px
     @include m.sm-max
