--- a/stylesheets/sass/modules/code-card.sass
+++ b/stylesheets/sass/modules/code-card.sass
@@ -29,6 +29,9 @@
         width: 100%
 
 
+.code-card-chevron-down-position
+    text-align: right
+
 .code-card-square
     background: #1d1e22
     border-radius: 6px
@@ -58,3 +61,16 @@
     padding-left: 8px
     p
         margin: 0
+
+.code-card-text-blink
+    animation: blink 1s infinite
+@keyframes blink
+    0%
+        opacity:  0
+    50%
+         opacity: 0
+    50%
+        opacity:  1
+    100%
+         opacity: 1
+
