--- a/stylesheets/sass/modules/sidebar-menu.sass
+++ b/stylesheets/sass/modules/sidebar-menu.sass
@@ -27,3 +27,13 @@
     font-size: v.$sidebar-font-size
 
 
+.sidebar-get-start-text
+    margin:0.2rem
+    font-size: 0.8rem
+    text-align: center
+    color: #b7bbc8
+
+.sidebar-intro-text
+    background: black
+    padding: 8px
+    width:100%
