--- a/stylesheets/sass/modules/text.sass
+++ b/stylesheets/sass/modules/text.sass
@@ -9,10 +9,10 @@
     font-weight: 900
 
 .text-primary
-    color:  #47cf73
+    color: v.$primary-color
 
 .text-secondary
-    color:  v.$light-Blue
+    color:  v.$secondary-color
 
 .text-light-secondary
     color:#7a99ad
@@ -21,10 +21,10 @@
     color: #b7bbc8
 
 .text-warning
-    color: v.$color-warning
+    color: v.$warning-color
 
 .text-light-warning
-    color:#e1ca72
+    color: v.$light-warning-color
 
 .text-number
     color:#a88038
@@ -34,29 +34,3 @@
 
 .text-property
     color:#9f8198
-
-.text-blink
-    animation: blink 1s infinite
-@keyframes blink
-    0%
-        opacity:  0
-    50%
-         opacity: 0
-    50%
-        opacity:  1
-    100%
-         opacity: 1
-
-.chevron-down-position
-    text-align: right
-
-.get-start-text
-    margin:0.2rem
-    font-size: 0.8rem
-    text-align: center
-    color: #b7bbc8
-
-.sidebar-intro-text
-    background: black
-    padding: 8px
-    width:100%
