--- a/stylesheets/sass/variable.sass
+++ b/stylesheets/sass/variable.sass
@@ -1,17 +1,14 @@
 // Colors:
 
 $background-color: #131417
-// declare your variables for color
 $sidebar-color: #1F1F26
-$light-Green:#4fcf70
-$light-Yellow:#fad648
-$light-purple:#a767e5
-$light-Blue:#12bcfe
-$light-Gray: #3f3f43
+$primary-color: #47cf73
+$light-warning-color: #e1ca72
+$secondary-color:#12bcfe
+$button-color: #3f3f43
+$warning-color: #ffdd40
 
-$color-warning: #ffdd40
 // Break Points:
-
 $screen-sm-min: 576px
 
 // Small tablets (portrait view)
