--- a/stylesheets/sass/modules/button.sass
+++ b/stylesheets/sass/modules/button.sass
@@ -3,7 +3,7 @@
 .button
     display: inline-block
     text-align: center
-    border: 3px solid v.$light-Gray
+    border: 3px solid v.$button-color
     border-radius: 4px
     padding: 8px 16px
     &:hover
@@ -11,10 +11,10 @@
         cursor: pointer
 
 
-.logo-button
+.button-logo
     margin: 0px 16px
     border: 3px solid  transparent
-    background-image: linear-gradient(115deg, v.$light-Green ,v.$light-Yellow,v.$light-purple,v.$light-Blue,v.$light-Green )  
+    background-image: linear-gradient(115deg, #4fcf70 ,#fad648,#a767e5,#12bcfe,#44ce7b )  
     width:154px
     padding: 0
 
