--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -90,10 +90,10 @@ a :hover {
   cursor: pointer;
 }
 
-.logo-button {
+.button-logo {
   margin: 0px 16px;
   border: 3px solid transparent;
-  background-image: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #4fcf70);
+  background-image: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);
   width: 154px;
   padding: 0;
 }
@@ -248,6 +248,10 @@ a :hover {
   }
 }
 
+.code-card-chevron-down-position {
+  text-align: right;
+}
+
 .code-card-square {
   background: #1d1e22;
   border-radius: 6px;
@@ -283,6 +287,24 @@ a :hover {
   margin: 0;
 }
 
+.code-card-text-blink {
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .features {
   justify-content: center;
 }
@@ -415,6 +437,19 @@ a :hover {
   font-size: 0.8rem;
 }
 
+.sidebar-get-start-text {
+  margin: 0.2rem;
+  font-size: 0.8rem;
+  text-align: center;
+  color: #b7bbc8;
+}
+
+.sidebar-intro-text {
+  background: black;
+  padding: 8px;
+  width: 100%;
+}
+
 .text-important {
   font-weight: bold;
 }
@@ -457,41 +492,6 @@ a :hover {
 
 .text-property {
   color: #9f8198;
-}
-
-.text-blink {
-  animation: blink 1s infinite;
-}
-
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.chevron-down-position {
-  text-align: right;
-}
-
-.get-start-text {
-  margin: 0.2rem;
-  font-size: 0.8rem;
-  text-align: center;
-  color: #b7bbc8;
-}
-
-.sidebar-intro-text {
-  background: black;
-  padding: 8px;
-  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
