--- a/stylesheets/sass/modules/code-card.sass
+++ b/stylesheets/sass/modules/code-card.sass
@@ -62,6 +62,15 @@
     p
         margin: 0
 
+.code-card-text-number
+    color:#a88038
+
+.code-card-text-variable-name
+    color:#74b087
+
+.code-card-text-property
+    color:#9f8198
+
 .code-card-text-blink
     animation: blink 1s infinite
 @keyframes blink
